 * user interface
   * the apple key works as shortcut modifier again (bug #10586)
   * made "Show lobby joins of friends only" the default preference
 * WML engine:
   * Fixed a problem where two [recall]s in a SP game could get an out of sync
     recruitment
   * avoid triggering an assertion when a duplicated side definition exists
     (bug #7252)
 * miscellaneous and bug fixes:
   * set the default resistance to 100 (no resistance) instead of 0 (immune)
     (bug #10661)
   * when loading a unit some traits didn't get applied correctly but got
     fixed in a later state. This could lead to some units not leveling 
     properly (bug #10304)
   * validate vector access for colours (bug #10622)
   * Fixed OOS on unit advancement if wml had battle/die events (bug #10590)
   * added serveral fixes to compile with Sun Studio compiler (patch #911)
   * bumped autoconf version requirement to 2.60 since it's needed for the
     boost tests (bug #10636)

Version 1.3.13:
 * campaigns:
   * A Tale of Two Brothers:
     * what the correct passwords for 'Guarded Castle' are is now randomized
   * Liberty:
     * 'Hide and Seek' mostly rewritten and it now has a bigger map with
       randomly placed guards
   * The South Guard:
     * now the player has to kill the fake M'Brin in 'Choice in the Fog' instead
       of just attacking once
 * language and i18n:
   * updated translations: Chinese, Czech, Danish, Finnish, French, German,
     Greek, Hungarian, Italian, Lithuanian, Polish, Portuguese (Brazil),
     Valencian
   * updated DejaVuSans to 2.22
 * map editor:
   * resize actions can be undone again (bug #10216)
 * multiplayer:
   * revised maps: Hamlets
   * recruitment OOS is fatal now (bug #9723)
   * the server now stores the next scenario send but the host, thus the
     clients no longer restart in the previous scenario
   * the next scenario now properly loads the recall list     
 * sound:
   * new or improved sounds: ogre hit and die, MP chat
 * units: